# cuda-beam-search

./: .gitignore  CMakeLists.txt  README.md
examples/: whisper_beam_search_example.py  whisper_decoder_example.py
include/whisper/beam_search/: argmax_kernel.h  beam_array.h  beam_config.h  beam_types.h  cuda_utils.h  history_reconstruct.h  logit_processor.h  prune_kernel.h  score_kernel.h  sequence_manager.h  tensor_bridge.h  token_expansion_kernel.h
include/whisper/decoder/: beam_search.h
include/whisper/utils/: cuda_common.h  cuda_helpers.h  cuda_stream_manager.h  gpu_memory_pool.h
python/: __init__.py  extract_logits.py  main.py  transcribe.py
python/config/: __init__.py
python/tests/: check_logits.py  tensor_test.py
python/utils/: __init__.py  cuda_utils.py
python/whisper/: __init__.py  beam_search_decoder.py  extract_logits.py  whisper_utils.py
src/whisper/beam_search/: argmax_kernel.cu  beam_array.cu  beam_types.cc  history_reconstruct.cu  logit_processor.cu  prune_kernel.cu  python_bindings.cc  score_kernel.cu  sequence_manager.cc  tensor_bridge.cc  tensor_bridge.cu  token_expansion_kernel.cu
src/whisper/utils/: cuda_stream_manager.cc  gpu_memory_pool.cc
tests/: test_argmax.cc  test_beam_array.cc  test_beam_types.cc  test_integration.cc  test_logit_processor.cc  test_process_logits.cc  test_score_kernel.cc  test_sequence_manager.cc  test_stream_manager.cc  test_stream_synchronization.cc  test_tensor_bridge.cc  test_token_expansion.cc  test_workspace.cc
